#33 Fixed karaf error on startup of nexus