@@ -51,6 +51,7 @@ function setNexusVmoptionsAndProperties() {
   -Djavax.net.ssl.trustStore=${TRUSTSTORE}
   -Djavax.net.ssl.trustStorePassword=changeit
   -Djava.net.preferIPv4Stack=true
+  -Djava.endorsed.dirs=lib/endorsed
 EOF
 }
 
